[gd_scene load_steps=4 format=3 uid="uid://dqmyih448kl6a"]

[ext_resource type="Script" path="res://Scripts/ClickablePoint.gd" id="1_o8esa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vjrn8"]
size = Vector2(15, 15)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_a4j1x"]
size = Vector2(15, 15)

[node name="Area2D" type="Area2D"]
position = Vector2(452, 243)
script = ExtResource("1_o8esa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vjrn8")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = SubResource("PlaceholderTexture2D_a4j1x")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
